--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -486,3 +486,13 @@ footer {
         padding: 0.5rem 0.2rem;
     }
 }
+
+.logo{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: #fff;
+    display: inline-block;
+    margin-right: 10px;
+    vertical-align: middle;
+}
